# obrl

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
simracer_scraper/: .env.example  .gitignore  ANSWER_PROGRESSIVE.md  ARCHITECTURE.md  BACKLOG.md  CACHE_IMPROVEMENT_PLAN.md  COMPLETED.md  DATABASE_SCHEMA_REFERENCE.md  DATA_MODEL.md  DEMO_QUICKSTART.md  DEVELOPMENT.md  ENHANCEMENTS.md  ENHANCEMENT_4_ANALYSIS.md  ENHANCEMENT_4_COMPLETE.md  ENHANCEMENT_4_FINAL.md  ENHANCEMENT_4_VALIDATION.md  EXPORT_README.md  FRAMEWORK.md  JS_RENDERING_STATUS.md  PLAYWRIGHT_ISSUE.md  PROGRESSIVE_SCRAPING.md  RACE_EXTRACTION_UPDATE.md  REACTDOM_STRUCTURE.md  README.md  README_IMPLEMENTATION.md  RESEARCH_DRIVER_TEAM_EXTRACTORS.md  REVIEW_ORCHESTRATOR.md  SEASON_RACE_DEDUPLICATION.md  SPECIFICATION.md  STATUS.md  TASKS.md  TESTING_RULES.md  URL_FIX_SUMMARY.md  VERIFICATION_REPORT.md  WORKFLOW.md  config.yaml.example  demo_progressive.py  demo_scraper.py  mise.toml  pyproject.toml  (+7 more)
simracer_scraper/.claude/: settings.local.json
simracer_scraper/parquet_output/: _metadata.json  drivers.parquet  leagues.parquet  race_results.parquet  races.parquet  scrape_log.parquet  seasons.parquet  series.parquet
simracer_scraper/src/: __init__.py  __main__.py  base_scraper.py  cli.py  database.py  export_cli.py  league_scraper.py  orchestrator.py  schema_validator.py  simple_scraper.py
simracer_scraper/src/export/: __init__.py  parquet_exporter.py
simracer_scraper/src/extractors/: __init__.py  base.py  driver.py  league.py  race.py  season.py  series.py
simracer_scraper/src/utils/: __init__.py  browser_manager.py  js_parser.py
simracer_scraper/tests/: __init__.py  conftest.py
simracer_scraper/tests/fixtures/: league_series_1558.html  season_race_324462.html  season_race_3714.html  series_seasons_3714.html
simracer_scraper/tests/unit/: test_base_extractor.py  test_browser_manager.py  test_database.py  test_database_crud.py  test_driver_extractor.py  test_js_parser.py  test_league_extractor.py  test_orchestrator.py  test_race_extractor.py  test_schema_validator.py  test_season_extractor.py  test_series_extractor.py
wheel_overlay/: .gitignore  BUILD_COMMANDS.md  CHANGELOG.md  CI_CD_SETUP.md  CONVERSION_COMPLETE.md  CONVERSION_STATUS.md  LICENSE.rtf  LICENSE.txt  (+9 more)
(+68 files in other folders)
